fix: overflow bug

--- a/frontend/src/app/static/annotations.css
+++ b/frontend/src/app/static/annotations.css
@@ -1,4 +1,4 @@
-html {
+html:has(.left-column) {
   overflow: hidden;
 }
 
